--- a/Akka-Neo MiniProject/_Imports.razor
+++ b/Akka-Neo MiniProject/_Imports.razor
@@ -6,5 +6,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Akka_Neo_MiniProject
-@using Akka_Neo_MiniProject.Layout
+@using AkkaNeo_MiniProject
